--- a/cambiar Ruta/cambioRuta.html
+++ b/cambiar Ruta/cambioRuta.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
-<html>	
+<html lang="es">	
 <head>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC5rTAKFqIj-htRhtz6VXm0KmEjifIzqm4">
-	</script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
-	</script>
-	<script type="text/javascript"> 
+	<meta charset="utf-8">
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC5rTAKFqIj-htRhtz6VXm0KmEjifIzqm4&libraries=places"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<style>
+		#myMap {
+			height: 350px;
+			width: 680px;
+		}
+	</style>
+</head>
+<body>
+	<label>Origen:</label>
+	<input id="origen" type="text">
+	<br>
+	<label>Destino:</label>
+	<input id="destino">
+	<br>
+	<label >Latitud:</label><input type="text" id="latitude" placeholder="Latitude"/>
+	<label >Longitud:</label><input type="text" id="longitude" placeholder="Longitude"/>
+	<br>
+	<label id="costo">Costo:</label>
+	<br>
+	<label id="distancia">Distancia:</label>
+	<div id="myMap"></div>
+	<script type="text/javascript">
+		if (navigator.geolocation) {
+			navigator.geolocation.getCurrentPosition(function (position) {
+				initialLocation = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+				map.setCenter(initialLocation);
+				marker.setPosition(initialLocation); 
+			});
+		} 
 		var map;
 		var marker;
-		var myLatlng = new google.maps.LatLng(19.4978,-99.1269);
+		var marker2;
+		var myLatlng = { lat: 19.4978, lng: -99.1269 };
 		var geocoder = new google.maps.Geocoder();
+		var geocoder2 = new google.maps.Geocoder();
 		var infowindow = new google.maps.InfoWindow();
 		function initialize(){
 			var mapOptions = {
@@ -24,13 +53,17 @@
 				map: map,
 				position: myLatlng,
 				draggable: true 
-			}); 
+			});
+			marker2 = new google.maps.Marker({
+				map:map,
+				draggable: true
+			}) 
 
 			geocoder.geocode({'latLng': myLatlng }, function(results, status) {
 				if (status == google.maps.GeocoderStatus.OK) {
 					if (results[0]) {
 						$('#latitude,#longitude').show();
-						$('#address').val(results[0].formatted_address);
+						$('#origen').val(results[0].formatted_address);
 						$('#latitude').val(marker.getPosition().lat());
 						$('#longitude').val(marker.getPosition().lng());
 						infowindow.setContent(results[0].formatted_address);
@@ -44,7 +77,7 @@
 				geocoder.geocode({'latLng': marker.getPosition()}, function(results, status) {
 					if (status == google.maps.GeocoderStatus.OK) {
 						if (results[0]) {
-							$('#address').val(results[0].formatted_address);
+							$('#origen').val(results[0].formatted_address);
 							$('#latitude').val(marker.getPosition().lat());
 							$('#longitude').val(marker.getPosition().lng());
 							infowindow.setContent(results[0].formatted_address);
@@ -53,21 +86,52 @@
 					}
 				});
 			});
+			google.maps.event.addListener(marker2, 'dragend', function() {
+
+				geocoder2.geocode({'latLng': marker2.getPosition()}, function(results, status) {
+					if (status == google.maps.GeocoderStatus.OK) {
+						if (results[0]) {
+							$('#destino').val(results[0].formatted_address);
+							$('#latitude').val(marker2.getPosition().lat());
+							$('#longitude').val(marker2.getPosition().lng());
+							infowindow.setContent(results[0].formatted_address);
+							infowindow.open(map, marker2);
+						}
+					}
+				});
+			});
+			var searchBox = new google.maps.places.SearchBox(document.getElementById('origen'));
+			var searchBox2 = new google.maps.places.SearchBox(document.getElementById('destino'));
+			google.maps.event.addListener(searchBox, 'places_changed',function(){
+
+				var places = searchBox.getPlaces();
+
+				var bounds = new google.maps.LatLngBounds();
+				var i, place;
+				for(i=0; place=places[i];i++){
+					bounds.extend(place.geometry.location);
+					marker.setPosition(place.geometry.location);
+				}
+				map.fitBounds(bounds);
+				map.setZoom(15);
+			});
+			google.maps.event.addListener(searchBox2, 'places_changed',function(){
+
+				var places = searchBox2.getPlaces();
+
+				var bounds = new google.maps.LatLngBounds();
+				var i, place;
+
+				for(i=0; place=places[i];i++){
+					bounds.extend(place.geometry.location);
+					marker2.setPosition(place.geometry.location);
+				}
+				map.fitBounds(bounds);
+				map.setZoom(15);
+			});
 
 		}
 		google.maps.event.addDomListener(window, 'load', initialize);
 	</script>
-	<style>
-		#myMap {
-			height: 350px;
-			width: 680px;
-		}
-	</style>
-</head>
-<body>
-	<div id="myMap"></div>
-	<input id="address" type="text" style="width:600px;"/><br/>
-	<input type="text" id="latitude" placeholder="Latitude"/>
-	<input type="text" id="longitude" placeholder="Longitude"/>
 </body>
 </html>
