--- a/cambiar Ruta/cambioRuta.html
+++ b/cambiar Ruta/cambioRuta.html
@@ -2,9 +2,9 @@
 <html lang="es">	
 <head>
 	<meta charset="utf-8">
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC5rTAKFqIj-htRhtz6VXm0KmEjifIzqm4&libraries=places"></script>
+<!-- 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC5rTAKFqIj-htRhtz6VXm0KmEjifIzqm4&libraries=places"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="mapaGoogle.js"></script>
+	<script src="mapaGoogle.js"></script> -->
 	<style>
 		#myMap {
 			height: 350px;
@@ -28,6 +28,8 @@
 	<label id="costo">Costo:</label>
 	<br>
 	<label id="distancia">Distancia:</label>
+	<br>
+	<label id="arrendatariosStatus">Arrendatarios con status:</label>
 	<div id="myMap"></div>
 </body>
 <script defer src="https://www.gstatic.com/firebasejs/7.6.1/firebase-app.js"></script>
